--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -14,6 +14,6 @@
 
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Diary</a>
 
-    <code>of a Teenager Girl</code>?
+    <code>of a Teenager Girl</code>
 
       <a href = "w1.html">--></a>  
