--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -15,6 +15,11 @@
   creating by exertion of the imagination."
   &mdash; <a href = "https://en.wikipedia.org/wiki/Fred_Brooks">Fred Brooks</a>
 </blockquote>
+
+</blockquote>
+"New beginnings are often disguised as painful endings."
+&mdash; <a href = "https://https://en.wikipedia.org/wiki/Laozi">Lao Tzu</a>
+</blockquote>
     
 <blockquote>
   "A programmer is ideally an essayist who works with traditional
