--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -18,7 +18,7 @@
 
 </blockquote>
   "New beginnings are often disguised as painful endings."
-  &mdash; <a href = "https://https://en.wikipedia.org/wiki/Laozi">Lao Tzu</a>
+  &mdash; <a href = "https://en.wikipedia.org/wiki/Laozi">Lao Tzu</a>
 </blockquote>
     
 <blockquote>
